# programming-technology-labs

./: CMakeLists.txt  complex_test.cpp
Complex/: complex.cpp  complex.hpp
bin.win32.vc2015.dbg/: dynamic_array.ilk
cmake/: build_prefix.cmake
prj.course/: CMakeLists.txt
prj.course/client/: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.h  settings.cpp  settings.h  settings.ui  subscriber.cpp  subscriber.h
prj.course/server/: CMakeLists.txt  beacon.cpp  beacon.h  forwarder.cpp  forwarder.h  main.cpp  server.cpp  server.h  server.ui
prj.labs/: CMakeLists.txt
prj.labs/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.labs/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  dynamic_array_test.cpp
prj.labs/dynamic_array_t/: CMakeLists.txt  dynamic_array_t.h
prj.labs/matrix/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_test.cpp
prj.labs/priority_queue_on_array/: CMakeLists.txt  priority_queue_on_array.cpp  priority_queue_on_array.h  priority_queue_on_array_test.cpp
prj.labs/priority_queue_on_list/: CMakeLists.txt  priority_queue_on_list.cpp  priority_queue_on_list.h  priority_queue_on_list_test.cpp
prj.labs/queue_on_array/: CMakeLists.txt  queue_on_array.cpp  queue_on_array.h
prj.labs/rational/: CMakeLists.txt  rational.cpp  rational.h  rational_test.cpp
prj.labs/stack_on_list/: CMakeLists.txt  stack_on_list.cpp  stack_on_list.h  stack_on_list_test.cpp
prj.labs/tests/: CMakeLists.txt  complex_test.cpp  dynamic_array_t_test.cpp  dynamic_array_test.cpp  matrix_test.cpp  priority_queue_on_array_test.cpp  priority_queue_on_list_test.cpp  queue_on_array_test.cpp  rational_test.cpp  stack_on_list_test.cpp
